--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
 </head>
 
 <body>
+  <!-- Header Section  -->
   <header>
-    <nav>
+    <nav class="container">
       <div class="logo">
         <img src="assets/logo-navbar.png" alt="">
       </div>
-      <ul>
+      <ul class="menu">
         <li><a href="#">Features</a></li>
         <li><a href="#">How It Works</a></li>
         <li><a href="#">Why It's Different</a></li>
@@ -34,6 +35,23 @@
       </div>
     </nav>
   </header>
+  <!-- Banner Section  -->
+  <section class="banner">
+    <div class="banner-container container">
+      <div class="banner-btn">
+        <button class="btn top-btn"><img src="assets/circle.png" alt=""> Early Access Now Open</button>
+      </div>
+      <h1>Structured thinking,<span class="break-head">not just note-taking.</span></h1>
+      <p>A private space to store notes, links, and learning summaries — designed to
+        <span class="banner-span">help you think clearly, connect ideas, and turn learning into long-term
+          knowledge.</span>
+      </p>
+      <div class="banner-button">
+        <button class="btn top-btn">Start Building Your Vault <img src="assets/ArrowRight.png" alt=""></button>
+        <button class="btn top-btn"><img src="assets/Play.png" alt=""> See How It Works</button>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
