--- a/index.html
+++ b/index.html
@@ -36,22 +36,59 @@
     </nav>
   </header>
   <!-- Banner Section  -->
-  <section class="banner">
-    <div class="banner-container container">
-      <div class="banner-btn">
-        <button class="btn top-btn"><img src="assets/circle.png" alt=""> Early Access Now Open</button>
+  <main>
+    <section class="banner">
+      <div class="banner-container container">
+        <div class="banner-btn">
+          <button class="btn top-btn"><img src="assets/circle.png" alt=""> Early Access Now Open</button>
+        </div>
+        <h1>Structured thinking,<span class="break-head">not just note-taking.</span></h1>
+        <p>A private space to store notes, links, and learning summaries — designed to
+          <span class="banner-span">help you think clearly, connect ideas, and turn learning into long-term
+            knowledge.</span>
+        </p>
+        <div class="banner-button">
+          <button class="btn top-btn">Start Building Your Vault <img src="assets/ArrowRight.png" alt=""></button>
+          <button class="btn top-btn"><img src="assets/Play.png" alt=""> See How It Works</button>
+        </div>
       </div>
-      <h1>Structured thinking,<span class="break-head">not just note-taking.</span></h1>
-      <p>A private space to store notes, links, and learning summaries — designed to
-        <span class="banner-span">help you think clearly, connect ideas, and turn learning into long-term
-          knowledge.</span>
-      </p>
-      <div class="banner-button">
-        <button class="btn top-btn">Start Building Your Vault <img src="assets/ArrowRight.png" alt=""></button>
-        <button class="btn top-btn"><img src="assets/Play.png" alt=""> See How It Works</button>
+    </section>
+    <!-- notes section  -->
+    <section class="notes container ">
+      <div class="notes-section">
+        <h1>Notes don't fail, Structure does.</h1>
+        <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>
       </div>
-    </div>
-  </section>
+      <div class="card-section">
+        <div class="card">
+          <img src="assets/Vector.png" alt="">
+          <h4>Scattered notes</h4>
+          <p>Your ideas live in 10 different apps, none of them connected.</p>
+        </div>
+        <div class="card">
+          <img src="assets/Bookmarks.png" alt="">
+          <h4>Bookmark overload</h4>
+          <p>Hundreds of saved links you'll never revisit or remember.</p>
+        </div>
+        <div class="card">
+          <img src="assets/Brain.png" alt="">
+          <h4>No idea connections</h4>
+          <p>Insights stay isolated, never building into bigger understanding.</p>
+        </div>
+        <div class="card">
+          <img src="assets/Info.png" alt="">
+          <h4> Forgetting what you learned</h4>
+          <p>Knowledge fades because there's no system to retain it.</p>
+        </div>
+
+      </div>
+    </section>
+
+
+
+
+
+  </main>
 </body>
 
 </html>
