--- a/index.html
+++ b/index.html
@@ -83,7 +83,26 @@
 
       </div>
     </section>
+    <!-- Brain section  -->
+    <section class="brains container">
+      <div class="brains-img">
+        <img src="assets/knowledge.png" alt="">
+      </div>
+      <div class="brains-content">
+        <h5> The Solution</h5>
+        <h3> Your second brain, structured by design.</h3>
+        <p class="sub-title">Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where
+          every note, link,
+          and summary becomes part of an interconnected web of understanding.</p>
+        <div class="brain-icon">
+          <p><img src="assets/CheckCircle.png" alt=""> Capture ideas with structure built-in from day one</p>
+          <p><img src="assets/CheckCircle.png" alt=""> Connect related concepts automatically as you write</p>
+          <p><img src="assets/CheckCircle.png" alt=""> Build lasting knowledge through reflection prompts</p>
+          <p><img src="assets/CheckCircle.png" alt=""> Find anything instantly with semantic search</p>
+        </div>
+      </div>
 
+    </section>
 
 
 
