--- a/index.html
+++ b/index.html
@@ -116,6 +116,25 @@
     </section>
   </main>
   <!-- footer section  -->
+  <footer>
+    <section class="footer-section container">
+      <img src="assets/logo-footer.png" alt="">
+      <div class="social">
+        <p>Social Links</p>
+        <div>
+          <i class="fa-brands fa-x-twitter"></i>
+          <i class="fa-brands fa-linkedin-in"></i>
+          <i class="fa-brands fa-facebook-f"></i>
+        </div>
+      </div>
+      
+
+    </section>
+    <div class="last-footer">
+      <p>© 2026 Personal Knowledge Vault. All rights reserved.</p>
+    </div>
+
+  </footer>
 </body>
 
 </html>
